--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -19,7 +19,7 @@
       }
   },
 
-  "codeLens.enable": true,
+  "codeLens.enable": false,
 
   "coc.preferences.formatOnSaveFiletypes": [
     "elm"
