--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,22 +1,37 @@
 {
   "languageserver": {
       "elmLS": {
+        "enable": true,
+        "disabledFeatures": [ 
+            //"formatting",
+            //"documentFormatting",
+            //"documentRangeFormatting",
+            //"documentOnTypeFormatting"
+        ],
         "command": "elm-language-server",
         "filetypes": ["elm"],
         "rootPatterns": ["elm.json"],
         "trace.server": "verbose",
         "initializationOptions": {
+          "onlyUpdateDiagnosticsOnSave": true,
           "elmPath": "elm", // optional
           "elmFormatPath": "elm-format", // optional
-          "elmTestPath": "elm-test", // optional
-          "elmAnalyseTrigger": "change" // optional
+          "elmTestPath": "elm-test" // optional
+          // "elmAnalyseTrigger": "change"
         }
       },
       "metals": {
+        "enable": false,
         "command": "metals-vim",
         "rootPatterns": ["build.sbt"],
         "filetypes": ["scala", "sbt"]
       }
+      //"rust": {
+      //  "enable": false,
+      //  "command": "rust-analyzer",
+      //  "filetypes": ["rust"],
+      //  "rootPatterns": ["Cargo.toml"]
+      //}
   },
 
   "codeLens.enable": false,
